...
    >
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_egg_batch_label"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <AutoCompleteTextView
            android:id="@+id/et_batch_label"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
...
            android:inputType="date"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_number_of_eggs"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_number_of_eggs"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
...
        android:layout_below="@id/text_number_of_eggs"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/et_species_name"
        android:tooltipText="Tracking Option">
        <TextView
...

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_species_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
...
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_common_name"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_common_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
...
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_incubator_name"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_incubator_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
...
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_incubator_settings"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_incubator_settings"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
...
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_temperature"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_temperature"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
...
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_location"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_location"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
...
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_incubation_days"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>
...

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_incubation_days"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
...
            android:inputType="number"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_target_weight_loss"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_target_weight_loss"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
...
            android:inputType="number"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_number_of_eggs_hatched_rl"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_number_of_eggs_hatched_rl"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
...
