...
    <item
        android:id="@+id/settings"
        android:title="Settings"
         />

    <item android:id="@+id/egg_batch_mngt"
        android:title="Egg Batch Management" />

    <item android:id="@+id/send_feedback"
        android:title="Send Feedback" />

    <item android:id="@+id/create_alert"
        android:title="Create Alert" />
...
